# nv-failsafe-recovery

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  display_incident.md
.github/workflows/: legacy-powershell-ci.yml  markdown-lint.yml  powershell-ci.yml  python-ci.yml  release.yml
docs/: architecture.md  classification-model.md  decision-tree.md  evidence-schema.md  faq.md  migration-powershell-to-python.md  release-process.md  remediation-policy.md  runbook.md  safety-model.md  threat-model.md  troubleshooting-playbook.md
examples/: audit-log.sample.jsonl  doctor-output.sample.txt  nv-failsafe-report.sample.json  sample-audit-log.jsonl  sample-normal-report.json  sample-nv-failsafe-report.json  sample-policy-blocked-report.json
legacy/powershell/: README.md
nv_failsafe_recovery/: __init__.py  __main__.py  audit.py  classifier.py  cli.py  evidence.py  orchestrator.py  policy.py  remediation.py  reporting.py  utilities.py  version.py
psd1/: NvFailsafeRecovery.psd1
scripts/: Install-ScheduledTask.ps1  Invoke-SmokeTest.ps1  NvFailsafeRecovery.ps1  Uninstall-ScheduledTask.ps1  install_scheduled_task.py  invoke_smoke_test.py  uninstall_scheduled_task.py
src/: Audit.ps1  Classifier.ps1  Evidence.ps1  Policy.ps1  Reporting.ps1  Utilities.ps1
tests/: Audit.Tests.ps1  Classifier.Tests.ps1  Evidence.Tests.ps1  Manifest.Tests.ps1  Policy.Tests.ps1  Remediation.Tests.ps1  Reporting.Tests.ps1  conftest.py  test_audit.py  test_classifier.py  test_manifest.py  test_policy.py  test_remediation.py  test_reporting.py
(+11 files in other folders)
