[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nv-failsafe-recovery"
version = "2.0.0"
description = "Evidence-first NVIDIA NV-Failsafe / 640x480 recovery toolkit for Windows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "NV-Failsafe Recovery Contributors" }]
keywords = ["NVIDIA", "Display", "NV-Failsafe", "Windows", "SRE", "Diagnostics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "packaging>=23.0",
    "WMI>=1.5.1; sys_platform == 'win32'",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
]

[project.scripts]
nv-failsafe-recovery = "nv_failsafe_recovery.cli:main"

[project.urls]
Homepage = "https://github.com/Kozphy/nv-failsafe-recovery"
Repository = "https://github.com/Kozphy/nv-failsafe-recovery"

[tool.setuptools.packages.find]
include = ["nv_failsafe_recovery*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
